--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+body {
+    background-color: white;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+    padding: 15px;
+    border: 2px solid;
+    font-size: 16px;
+    border-radius: 4px;
+}
+
+main footer {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .judul h1 {
     font-size: 45px;
     font-family:"sans-serif";
@@ -16,8 +34,12 @@
 
 }
 
-#konversi-input {
+.form-content {
+    margin-bottom: 10px;
+}
 
+.section-content {
+    margin-bottom: 10px;
 }
 
 .button-konversi {
@@ -32,10 +54,7 @@
 
 }
 
-#result-output {
-
-}
-
-#calculate-detail {
-
+.formula {
+    font-size: x-large;
+    font-style: italic;
 }
